# chippp-8

./: CMakeLists.txt  README.md  flake.nix
src/: main.cpp
src/emulator/: Emulator.cpp  Emulator.hpp  Environment.cpp  Environment.hpp  Instruction.hpp  Register.hpp
src/emulator/instructions/: ADDByte.hpp  AddByte.hpp  AddIRegister.hpp  AddRegister.hpp  And.hpp  Call.hpp  Clear.hpp  Draw.hpp  Execute.hpp  GetDelayTimer.hpp  Invalid.hpp  Jump.hpp  JumpAddress.hpp  JumpRegister.hpp  LoadByte.hpp  LoadRegister.hpp  LoadRegisters.hpp  Move.hpp  Or.hpp  Random.hpp  Return.hpp  SetDelayTimer.hpp  SetIImmediate.hpp  SetIRegister.hpp  SetISprite.hpp  SetSoundTimer.hpp  ShiftLeft.hpp  ShiftRight.hpp  SkipEqualByte.hpp  SkipEqualRegister.hpp  SkipNotEqualByte.hpp  SkipNotEqualRegister.hpp  SkipNotPressed.hpp  SkipPressed.hpp  StoreBCD.hpp  StoreByte.hpp  StoreRegisters.hpp  SubFromDest.hpp  SubFromSource.hpp  WaitKey.hpp  (+1 more)
